<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pedro.epe1_felipeorellana.MainActivity"
    android:background="#eceff1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity1_titulo"
        android:ems="50"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity1_nombre"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textColor="#000000"/>



    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity1_correo"
        android:textSize="18sp"
        android:paddingTop="30dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/btnPromedio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/activity1_nombreBtn"
        android:background="#9e9e9e"
        android:textColor="#000000"
        android:textStyle="bold"
        />

</LinearLayout>
