<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pedro.epe1_felipeorellana.PromedioNotas"
    android:background="#eceff1">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="50"
                android:text="@string/activity2_titulo"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textStyle="bold"
                />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="15dp"
        android:text="@string/activity2_Solemnes"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp">

            <EditText
                android:id="@+id/txtEPR1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EPR1"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="#263238"/>

            <EditText
                android:id="@+id/txtEPE1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EPE1"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="#263238"/>

            <EditText
                android:id="@+id/txtEPR2"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EPR2"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="#263238"/>

            <EditText
                android:id="@+id/txtEPE2"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EPE2"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="#263238"/>
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/activity2_tituloEvaAcum"
        android:textSize="18sp"
        android:layout_marginLeft="15dp"
        android:textColor="#000000"
        android:textStyle="bold"/>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/txtE1"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EVA1"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="#263238"
                />

            <EditText
                android:id="@+id/txtE2"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EVA2"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="#263238"
                />

            <EditText
                android:id="@+id/txtE3"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EVA3"
                android:inputType="number"
                android:maxLength="2"
                android:textColorHint="#263238"/>

            <EditText
                android:id="@+id/txtE4"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="EVA4"
                android:inputType="number"
                android:maxLength="2"
                android:layout_marginRight="40dp"
                android:textColorHint="#263238"
                />
        </TableRow>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="15dp"
            android:text="@string/activity2_Promedio"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/txtPromedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:enabled="false"
            android:inputType="textPersonName"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLength="4"
            android:textStyle="bold"
            android:textColor="#d50000"
            />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="15dp"
            android:text="@string/activity2_NotaExamen"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtNotaExamen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="number"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="INGRESA NOTA DE EXAMEN"
            android:textColorHint="#263238"
            android:maxLength="2"
            />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="15dp"
            android:text="@string/activity2_PromedioFinal"
            android:textSize="18sp"
            android:textColor="#000000"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/txtPromedioFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:enabled="false"
            android:inputType="textPersonName"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLength="4"
            android:textStyle="bold"
            android:textColor="#d50000"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Calcular"
                tools:ignore="ButtonStyle"
                android:background="#9e9e9e"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Limpiar"
                android:background="#9e9e9e"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volver"
                android:background="#9e9e9e"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnCalcularEx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity2_calcularExamen"
                android:background="#9e9e9e"
                android:textStyle="bold"/>
        </TableRow>


    </TableLayout>



</LinearLayout>
